Fixed individual generator multipliers, added next level bonus text on generators, fixed upgrade titles overflowing

--- a/src/components/sideMenuItems.css
+++ b/src/components/sideMenuItems.css
@@ -1,11 +1,9 @@
 h5 {
-    white-space: nowrap;
     text-align: left;
     margin: 4px;
 }
 
 p {
-    /* white-space: nowrap; */
     font-size: 11pt;
     text-align: left;
     margin: 6px;
@@ -37,6 +35,7 @@ p {
     display: block;
     margin-left: auto;
     height: 100px;
+    align-self: center;
 }
 
 .generator-price {
@@ -95,8 +94,14 @@ p {
     position: absolute;
     top: 0px;
     z-index: -1; 
+    transition: width 0.15s;
 }
 
 .cannot-afford {
     filter: saturate(0.25) brightness(0.5);
+}
+
+.next-level-bonus {
+    font-weight: normal;
+    font-size: 9pt;
 }
